testsuite/tests/linear/should_fail/LinearNoExtU.stderr

LinearNoExtU.hs:4:14: error:
    Illegal use of linear functions
    Suggested fix: Perhaps you intended to use LinearTypes
